<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sn.myutils</groupId>
    <artifactId>myutils-root</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>org.sn.myutils: myutils-root</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <downloadSources>true</downloadSources>
        <downloadJavadocs>true</downloadJavadocs>
        <junit.version>5.5.0-M1</junit.version>
        <junit.platform.version>1.6.2</junit.platform.version>
        <maven-surefire-plugin.argLine>-Djava.util.logging.config.file=../org.sn.myutils.testutils/target/classes/logging.properties</maven-surefire-plugin.argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- main dependencies -->
            <!-- add dependency on jsr305 or org.jetbrains.annotations once either is fully modularized -->

            <!-- test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-commons</artifactId>
                <version>${junit.platform.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>${junit.platform.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.6.0</version>
                    <configuration>
                        <configLocation>checkstyle/checks.xml</configLocation>
                        <encoding>UTF-8</encoding>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <executions>
                        <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>24</release>
                        <showWarnings>true</showWarnings>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <configuration>
                                <compilerArgs>
                                    <arg>-Xlint:all</arg>
                                    <arg>-Werror</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <configuration>
                                <compilerArgs>
                                    <arg>-Xlint:all</arg>
                                    <arg>-Werror</arg>
                                    <arg>-Xlint:-missing-explicit-ctor</arg> <!-- otherwise test classes need an explicit constructor -->
                                    <arg>-Xlint:-exports</arg> <!-- otherwise error about classes like org.sn.myutils.testutils.TestBase and org.junit.jupiter.api.Test in unnamed module not exported -->
                                </compilerArgs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>${maven-surefire-plugin.argLine}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>org.sn.myutils.annotations</module>
        <module>org.sn.myutils.testutils</module>
        <module>org.sn.myutils.core</module>
        <module>org.sn.myutils.parsetree</module>
        <module>org.sn.myutils.pubsub</module>

        <module>org.sn.myutils.jsontestutils</module>
        <module>org.sn.myutils.pythonscripts</module>
    </modules>

</project>
